--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>FuncGodot Manual</title>
+		<title>-FuncGodot Manual</title>
 		<link rel="icon" type="image/x-icon" href="images/godot_ranger.svg">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>@@include('./style.css')</style>
