Add header css where applicable

--- a/src/pages/ref_func_godot_map.html
+++ b/src/pages/ref_func_godot_map.html
@@ -159,7 +159,7 @@
                     </td>
                 </tr>
 
-                <tr><td>Materials</td><td></td><td></td></tr>
+                <tr class="header"><td>Materials</td><td></td><td></td></tr>
                 <tr>
                     <td>Material File Extension</td>
                     <td>String</td>
@@ -224,7 +224,7 @@
                     </td>
                 </tr>
 
-                <tr><td>UV Unwrap</td><td></td><td></td></tr>
+                <tr class="header"><td>UV Unwrap</td><td></td><td></td></tr>
                 <tr>
                     <td>Uv Unwrap Texel Size</td>
                     <td>Float</td>
@@ -235,7 +235,7 @@
                     </td>
                 </tr>
 
-                <tr><td>TrenchBroom</td><td></td><td></td></tr>
+                <tr class="header"><td>TrenchBroom</td><td></td><td></td></tr>
                 <tr>
                     <td>Use Trenchbroom Groups Hierarchy</td>
                     <td>Bool</td>
